<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="@dimen/full_size"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/basic_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/basic_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/basic_margin" />


        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@id/background"
            app:layout_constraintEnd_toEndOf="@id/background"
            app:layout_constraintStart_toStartOf="@id/background"
            app:layout_constraintTop_toTopOf="@id/background" />

        <TextView
            android:id="@+id/back"
            style="@style/TextViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_38"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:drawablePadding="@dimen/eight_dp_margin"
            android:padding="@dimen/padding_10"
            android:text="@string/back"
            app:drawableStartCompat="@drawable/ic_path"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age"
            style="@style/TextViewAge"
            android:layout_marginBottom="@dimen/eight_dp_margin"
            android:text="@string/age"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <TextView
            android:id="@+id/name"
            style="@style/TextViewFilmName"
            android:layout_width="@dimen/full_size"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toBottomOf="@+id/background"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/background" />

        <TextView
            android:id="@+id/genre"
            style="@style/TextViewGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_dp_margin"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp_margin"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/eight_dp_margin"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/eight_dp_margin"
            app:layout_constraintStart_toEndOf="@+id/star2"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/eight_dp_margin"
            app:layout_constraintStart_toEndOf="@+id/star3"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:srcCompat="@drawable/ic_star_icon" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3"
            android:layout_marginTop="@dimen/eight_dp_margin"
            app:layout_constraintStart_toEndOf="@+id/star4"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:srcCompat="@drawable/ic_star_icon_blank" />

        <TextView
            android:id="@+id/reviews_counter"
            style="@style/TextViewReviewsCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight_dp_margin"
            android:layout_marginTop="@dimen/four_dp_margin"
            android:text="@string/reviews"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/storyline"
            style="@style/TextViewMiddleHeading"
            android:layout_width="@dimen/full_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/storyline"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/reviews_counter" />

        <TextView
            android:id="@+id/description"
            style="@style/TextViewFilmDescription"
            android:layout_width="@dimen/full_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_dp_margin"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/cast"
            style="@style/TextViewMiddleHeading"
            android:layout_width="@dimen/full_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:text="@string/cast"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <ImageView
            android:id="@+id/actor_img_1"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/eight_dp_margin"
            android:layout_marginEnd="@dimen/eight_dp_margin"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor_img_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/downey_jr" />

        <ImageView
            android:id="@+id/actor_img_2"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/eight_dp_margin"
            android:layout_marginEnd="@dimen/eight_dp_margin"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor_img_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor_img_1"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/evans" />

        <ImageView
            android:id="@+id/actor_img_3"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/eight_dp_margin"
            android:layout_marginEnd="@dimen/eight_dp_margin"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/actor_img_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor_img_2"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/ruffalo" />

        <ImageView
            android:id="@+id/actor_img_4"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/eight_dp_margin"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/actor_img_3"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/hemsworth" />


        <TextView
            android:id="@+id/actor_name_1"
            style="@style/TextViewActorName"
            android:layout_width="@dimen/full_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_6"
            android:text="@string/robert_downey_jr"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/actor_img_1"
            app:layout_constraintStart_toStartOf="@+id/actor_img_1"
            app:layout_constraintTop_toBottomOf="@+id/actor_img_1" />

        <TextView
            android:id="@+id/actor_name_2"
            style="@style/TextViewActorName"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/margin_6"
            android:text="@string/chris_evans"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/actor_img_2"
            app:layout_constraintStart_toStartOf="@+id/actor_img_2"
            app:layout_constraintTop_toBottomOf="@+id/actor_img_2" />

        <TextView
            android:id="@+id/actor_name_3"
            style="@style/TextViewActorName"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/margin_6"
            android:text="@string/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/actor_img_3"
            app:layout_constraintStart_toStartOf="@+id/actor_img_3"
            app:layout_constraintTop_toBottomOf="@+id/actor_img_3" />

        <TextView
            android:id="@+id/actor_name_4"
            style="@style/TextViewActorName"
            android:layout_width="@dimen/full_size"
            android:layout_height="@dimen/full_size"
            android:layout_marginTop="@dimen/margin_6"
            android:text="@string/chris_hemsworth"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintEnd_toEndOf="@id/actor_img_4"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/actor_img_4"
            app:layout_constraintTop_toBottomOf="@+id/actor_img_4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>